objects/UW_Area__c.object
<CustomObject>
    <description>Master table that store the information of UW mentors and responsibility area.</description>
    <fields>
        <fullName>Head_of_UW_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head of UW Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UW_Areas2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RC_Code__c</fullName>
        <externalId>true</externalId>
        <label>RC Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Senior_UW_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior UW Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UW_Areas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>UW Area</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RC_Code__c</columns>
        <columns>Senior_UW_Name__c</columns>
        <columns>Head_of_UW_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UWA-{000000}</displayFormat>
        <label>UW Area  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UW Areas</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>